add citation info

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,8 +1,8 @@
-@misc{MomentClosure.jl,
-	author  = {Augustinas Sukys},
-	title   = {MomentClosure.jl},
-	url     = {https://github.com/augustinas1/MomentClosure.jl},
-	version = {v0.1.0},
-	year    = {2021},
-	month   = {2}
+@misc{sukys2021momentclosurejl,
+      title={MomentClosure.jl: automated moment closure approximations in Julia},
+      author={Augustinas Sukys and Ramon Grima},
+      year={2021},
+      eprint={2105.05475},
+      archivePrefix={arXiv},
+      primaryClass={q-bio.MN}
 }
