--- a/examples/noisy_lotka_volterra.ipynb
+++ b/examples/noisy_lotka_volterra.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{bmatrix} dx \\\\ dy \\end{bmatrix}= \\begin{bmatrix} \\gamma_1 x(t) - \\gamma_2  x(t)  y(t)  \\\\ γ_4 x(t)  y(t) - \\gamma_3 y(t) - \\frac{1}{2} y(t) \\end{bmatrix} \\, dt + \\begin{bmatrix}  \\gamma_5 x \\\\ 0 \\end{bmatrix} \\, dW_t  $$"
+    "$$\\begin{bmatrix} dx \\\\ dy \\end{bmatrix}= \\begin{bmatrix} \\gamma_1 x(t) - \\gamma_2  x(t)  y(t) \\\\ \\gamma_4 x(t)  y(t) - \\gamma_3 y(t) - \\frac{1}{2} y(t) \\end{bmatrix} \\, dt + \\begin{bmatrix}  \\gamma_5 x \\\\ 0 \\end{bmatrix} \\, dW_t  $$"
    ]
   },
   {
@@ -37,44 +37,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling MomentClosure [01a1b25a-ecf0-48c5-ae58-55bfd5393600]\n",
+      "└ @ Base loading.jl:1317\n"
+     ]
+    }
+   ],
    "source": [
     "using MomentClosure, ModelingToolkit, DifferentialEquations, DiffEqParamEstim, Optim, LinearAlgebra, DifferentialEquations.EnsembleAnalysis, Plots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{align}\n",
-       "\\frac{dx(t)}{dt} =& x\\left( t \\right) \\gamma{_1} - x\\left( t \\right) y\\left( t \\right) \\gamma{_2} \\\\\n",
-       "\\frac{dy(t)}{dt} =&  - 0.5 y\\left( t \\right) + x\\left( t \\right) y\\left( t \\right) \\gamma{_4} - y\\left( t \\right) \\gamma{_3}\n",
-       "\\end{align}\n"
-      ],
-      "text/plain": [
-       "\u001b[0m\u001b[1mModel ##SDESystem#6046 with 2 equations\u001b[22m\n",
-       "\u001b[0m\u001b[1mStates (2):\u001b[22m\n",
-       "  x(t)\n",
-       "  y(t)\n",
-       "\u001b[0m\u001b[1mParameters (5):\u001b[22m\n",
-       "  γ[1]\n",
-       "  γ[2]\n",
-       "  γ[3]\n",
-       "  γ[4]\n",
-       "  γ[5]"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@variables t, x(t), y(t)\r\n",
     "@parameters γ[1:5]\r\n",
@@ -93,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
