--- a/examples/Brusselator-issues.ipynb
+++ b/examples/Brusselator-issues.ipynb
@@ -24,8 +24,8 @@
     "  (c₃*Ω, c₄), 0 ↔ X\n",
     "end\n",
     "\n",
-    "p = [:c₁ => 0.9, :c₂ => 2, :c₃ => 1, :c₄ => 1, :Ω => 100]\n",
-    "u₀ = [1, 1]\n",
+    "pmap = [:c₁ => 0.9, :c₂ => 2, :c₃ => 1, :c₄ => 1, :Ω => 100]\n",
+    "u0map = [:X => 1, :Y => 1]\n",
     "tspan = (0., 100.)\n",
     "\n",
     "raw_eqs = generate_raw_moment_eqs(rn, 2, combinatoric_ratelaws=false)"
@@ -39,8 +39,7 @@
    "source": [
     "closed_raw_eqs = moment_closure(raw_eqs, \"zero\")\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2)"
@@ -53,9 +52,7 @@
    "outputs": [],
    "source": [
     "closed_raw_eqs = moment_closure(raw_eqs, \"log-normal\")\n",
-    "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2, legend=:bottomright)"
@@ -71,8 +68,7 @@
     "raw_eqs = generate_raw_moment_eqs(rn, 2, combinatoric_ratelaws=true)\n",
     "closed_raw_eqs = moment_closure(raw_eqs, \"normal\")\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2)"
@@ -87,8 +83,7 @@
     "raw_eqs = generate_raw_moment_eqs(rn, 3, combinatoric_ratelaws=true)\n",
     "closed_raw_eqs = moment_closure(raw_eqs, \"normal\")\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2, legend=:bottomright)"
@@ -103,8 +98,7 @@
     "raw_eqs = generate_raw_moment_eqs(rn, 4, combinatoric_ratelaws=true)\n",
     "closed_raw_eqs = moment_closure(raw_eqs, \"normal\")\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2)"
@@ -119,8 +113,7 @@
     "raw_eqs = generate_raw_moment_eqs(rn, 2, combinatoric_ratelaws=true)\n",
     "closed_raw_eqs = moment_closure(raw_eqs, \"log-normal\")\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Rodas4P(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2)"
@@ -135,8 +128,7 @@
     "raw_eqs = generate_raw_moment_eqs(rn, 3, combinatoric_ratelaws=true)\n",
     "closed_raw_eqs = moment_closure(raw_eqs, \"log-normal\")\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "sol = solve(oprob, Rodas4P(), saveat=0.1)\n",
     "\n",
     "plot(sol, idxs=[1,2], lw=2)"
