--- a/examples/Brusselator-time-dependent.ipynb
+++ b/examples/Brusselator-time-dependent.ipynb
@@ -39,19 +39,16 @@
     "closed_raw_eqs = moment_closure(raw_eqs, \"normal\")\n",
     "\n",
     "# parameter values [c₁, c₂, c₃, c₄, Ω, ω, τ]\n",
-    "p = [:c₁ => 0.9, :c₂ => 2., :c₃ => 1., :c₄ => 1., :Ω => 5., :ω => 1., :τ => 40.]\n",
+    "pmap = [:c₁ => 0.9, :c₂ => 2., :c₃ => 1., :c₄ => 1., :Ω => 5., :ω => 1., :τ => 40.]\n",
     "\n",
     "# initial molecule numbers of species [X, Y]\n",
-    "u₀ = [1., 1.]\n",
-    "\n",
-    "# deterministic initial conditions\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs)\n",
+    "u0map = [:X => 1., :Y => 1.]\n",
     "\n",
     "# time interval to solve one on\n",
     "tspan = (0., 100.)\n",
     "\n",
     "# convert the closed raw moment equations into a DifferentialEquations ODEProblem\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "\n",
     "# solve using Tsit5() solver\n",
     "sol = solve(oprob, Tsit5(), saveat=0.2)\n",
@@ -75,7 +72,7 @@
    "source": [
     "using JumpProcesses\n",
     "\n",
-    "jinputs = JumpInputs(rn, u₀, tspan, p, combinatoric_ratelaws=false)\n",
+    "jinputs = JumpInputs(rn, u0map, tspan, pmap, combinatoric_ratelaws=false)\n",
     "jprob = JumpProblem(jinputs, Direct())"
    ]
   },
@@ -94,7 +91,7 @@
     "ensembleprob  = EnsembleProblem(jprob, output_func=fout)\n",
     "\n",
     "# simulate 10000 SSA trajectories (can get very slow...)\n",
-    "@time sol_SSA = solve(ensembleprob, Tsit5(), trajectories=10000);"
+    "@time sol_SSA = solve(ensembleprob, Tsit5(), trajectories=100);"
    ]
   },
   {
