--- a/examples/Brusselator.ipynb
+++ b/examples/Brusselator.ipynb
@@ -177,7 +177,17 @@
    "outputs": [],
    "source": [
     "# check the ordering of species in the model\n",
-    "speciesmap(rn)"
+    "speciesmap(raw_eqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deterministic initial conditions\n",
+    "moment_IC_map = deterministic_IC(u0map, closed_raw_eqs) "
    ]
   },
   {
@@ -189,17 +199,14 @@
     "# parameter values\n",
     "pmap = [:c₁ => 0.9, :c₂ => 2, :c₃ => 1, :c₄ => 1, :Ω => 100]\n",
     "\n",
-    "# initial molecule numbers of species [X, Y]\n",
-    "u₀ = [1, 1]\n",
-    "\n",
-    "# deterministic initial conditions\n",
-    "u₀map = deterministic_IC(u₀, closed_raw_eqs) \n",
+    "# mapping of initial molecule numbers\n",
+    "u0map = [:X => 1, :Y => 1]\n",
     "\n",
     "# time interval to solve one on\n",
     "tspan = (0., 100.)\n",
     "\n",
     "# convert the closed raw moment equations into a DifferentialEquations ODEProblem\n",
-    "oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, pmap)\n",
+    "oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap)\n",
     "\n",
     "using OrdinaryDiffEqTsit5\n",
     "# solve using Tsit5() solver\n",
@@ -234,7 +241,7 @@
     "jsys = complete(jsys) \n",
     "\n",
     "# create a DiscreteProblem encoding that the molecule numbers are integer-valued\n",
-    "dprob = DiscreteProblem(jsys, u₀, tspan, pmap) # same parameters as defined earlier\n",
+    "dprob = DiscreteProblem(jsys, u0map, tspan, pmap) # same parameters as defined earlier\n",
     "\n",
     "# create a JumpProblem: specify Gillespie's Direct Method as the solver\n",
     "# and SET save_positions to (false, false) as otherwise time of each\n",
