--- a/examples/LMA_example.ipynb
+++ b/examples/LMA_example.ipynb
@@ -77,15 +77,12 @@
    "source": [
     "using OrdinaryDiffEq, Sundials, Plots\n",
     "\n",
-    "# [g, p] as in species(rn_nonlinear)\n",
-    "u₀ = [1.0, 0.001]\n",
-    "\n",
+    "u0map = [:g => 1.0, :p => 0.001]\n",
     "pmap = Dict(:σ_b => 0.004, :σ_u => 0.25, :ρ_b => 25.0, :ρ_u => 60.0)\n",
     "tspan = (0., 15.)\n",
     "dt = 0.1\n",
     "\n",
-    "u₀map = deterministic_IC(u₀, LMA_eqs)\n",
-    "oprob_LMA = ODEProblem(LMA_eqs, u₀map, tspan, pmap)\n",
+    "oprob_LMA = ODEProblem(LMA_eqs, u0map, tspan, pmap)\n",
     "sol_LMA = solve(oprob_LMA, CVODE_BDF(), saveat=dt)\n",
     "\n",
     "plot(sol_LMA, idxs=[2], label=\"LMA\", ylabel=\"⟨p⟩\", xlabel=\"time\", fmt=\"svg\", guidefontsize=12)"
