--- a/examples/P53 system.ipynb
+++ b/examples/P53 system.ipynb
@@ -40,10 +40,10 @@
    "outputs": [],
    "source": [
     "# parameter values [k₁, k₂, k₃, k₄, k₅, k₆, k₇]\n",
-    "p = [:k₁ => 90, :k₂ => 0.002, :k₃ => 1.7, :k₄ => 1.1, :k₅ => 0.93, :k₆ => 0.96, :k₇ => 0.01]\n",
+    "pmap = [:k₁ => 90, :k₂ => 0.002, :k₃ => 1.7, :k₄ => 1.1, :k₅ => 0.93, :k₆ => 0.96, :k₇ => 0.01]\n",
     "\n",
     "# initial molecule numbers of species [x, y₀, y]\n",
-    "u₀ = [70, 30, 60]\n",
+    "u0map = [:x=> 70, :y₀ => 30, :y => 60]\n",
     "\n",
     "# time interval to solve one on\n",
     "tspan = (0., 200.)"
@@ -59,7 +59,7 @@
    "source": [
     "jsys = convert(JumpSystem, rn, combinatoric_ratelaws=false)\n",
     "jsys = complete(jsys)\n",
-    "dprob = DiscreteProblem(jsys, u₀, tspan, p)\n",
+    "dprob = DiscreteProblem(jsys, u0map, tspan, pmap)\n",
     "\n",
     "jprob = JumpProblem(jsys, dprob, Direct(), save_positions=(false, false))\n",
     "ensembleprob  = EnsembleProblem(jprob)\n",
@@ -162,15 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eqs = generate_central_moment_eqs(rn, 2, 3, combinatoric_ratelaws=false)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# second-order moment expansion\n",
     "\n",
     "closures = [\"normal\", \"log-normal\", \"gamma\"]\n",
@@ -184,9 +175,7 @@
     "    for (closure, plt) in zip(closures, plts)\n",
     "        println(closure)\n",
     "        closed_eqs = moment_closure(eqs, closure)\n",
-    "\n",
-    "        u₀map = deterministic_IC(u₀, closed_eqs) \n",
-    "        oprob = ODEProblem(closed_eqs, u₀map, tspan, p)\n",
+    "        oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "        \n",
     "        sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "        plt = plot!(plt, sol, idxs=[1], lw=2, label  = \"q = \"*string(q))\n",
@@ -308,12 +297,9 @@
     "    for closure in closures\n",
     "        println(closure)\n",
     "        closed_eqs = moment_closure(eqs, closure)\n",
-    "\n",
-    "        u₀map = deterministic_IC(u₀, closed_eqs)\n",
-    "        oprob = ODEProblem(closed_eqs, u₀map, tspan, p)\n",
+    "        oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "        sol = solve(oprob, Tsit5(), saveat=0.1)\n",
-    "\n",
-    "        # index of M₂₀₀ can be checked with `u₀map` or `closed_eqs.odes.states`\n",
+    "        # index of M₂₀₀ can be checked with `unknowns(closed_eqs)`\n",
     "        plt = plot!(plt, sol, idxs=[4], lw=2, label  = closure*\" q = \"*string(q))\n",
     "    end\n",
     "end\n",
@@ -341,9 +327,7 @@
     "# checking whether third-order moment expansion with odd q values is unstable (answer: yes it is)\n",
     "eqs = generate_central_moment_eqs(rn, 3, 5, combinatoric_ratelaws=false)\n",
     "closed_eqs = moment_closure(eqs, \"log-normal\")\n",
-    "\n",
-    "u₀map = deterministic_IC(u₀, closed_eqs) \n",
-    "oprob = ODEProblem(closed_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "\n",
     "sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "plot(sol, vars=(0, 1), lw=3)"
@@ -369,9 +353,7 @@
     "    for closure in closures\n",
     "        println(closure)\n",
     "        closed_eqs = moment_closure(eqs, closure)\n",
-    "\n",
-    "        u₀map = deterministic_IC(u₀, closed_eqs)\n",
-    "        oprob = ODEProblem(closed_eqs, u₀map, tspan, p)\n",
+    "        oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "\n",
     "        sol = solve(oprob, Tsit5(), saveat=0.1)\n",
     "        plt_m = plot!(plt_m, sol, vars=(0, 1), label = closure)    \n",
@@ -416,9 +398,7 @@
     "\n",
     "eqs = generate_central_moment_eqs(rn, 3, 4, combinatoric_ratelaws=false)\n",
     "closed_eqs = moment_closure(eqs, \"log-normal\")\n",
-    "\n",
-    "u₀map = deterministic_IC(u₀, closed_eqs) \n",
-    "oprob = ODEProblem(closed_eqs, u₀map, tspan, p)\n",
+    "oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "\n",
     "sol = solve(oprob, QNDF(), saveat=0.1)\n",
     "plot(sol, vars=(0, 1), lw=3)"
@@ -440,9 +420,7 @@
     "for closure in closures\n",
     "    println(closure)\n",
     "    closed_eqs = moment_closure(eqs, closure)\n",
-    "\n",
-    "    u₀map = deterministic_IC(u₀, closed_eqs) \n",
-    "    oprobs[closure] = ODEProblem(closed_eqs, u₀map, tspan, p)\n",
+    "    oprobs[closure] = ODEProblem(closed_eqs, u0map, tspan, pmap)\n",
     "    sol = solve(oprobs[closure], Tsit5(), saveat=0.1)\n",
     "\n",
     "    plt = plot!(plt, sol, vars=(0, 1), label = closure)    \n",
