--- a/examples/basic_SDE_tutorial.ipynb
+++ b/examples/basic_SDE_tutorial.ipynb
@@ -21,7 +21,7 @@
     "vdp_model = SDESystem(drift_eqs, diff_eqs, t, [x₁, x₂], [ϵ, ω_n, ω_g, A], name = :VdP)\n",
     "\n",
     "ps = [ϵ => 0.1, ω_n => 120*pi, ω_g => 120*pi, A => 2.5] # parameter values\n",
-    "u0 = [0.1, 0.1]   # initial conditions\n",
+    "u0map = [x₁ => 0.1, x₂ => 0.1]   # initial conditions\n",
     "tspan = (0., 0.1) # simulation time limit"
    ]
   },
@@ -56,10 +56,7 @@
     "using StochasticDiffEq\n",
     "\n",
     "closed_eqs = moment_closure(moment_eqs, \"derivative matching\")\n",
-    "\n",
-    "u0map = deterministic_IC(u0, closed_eqs)\n",
     "oprob = ODEProblem(closed_eqs, u0map, tspan, ps)\n",
-    "\n",
     "sol_MA = solve(oprob, Tsit5(), saveat=0.0001);"
    ]
   },
@@ -71,7 +68,7 @@
    "source": [
     "using DifferentialEquations.EnsembleAnalysis, Plots\n",
     "\n",
-    "prob_SDE = SDEProblem(complete(vdp_model), u0, tspan, ps)\n",
+    "prob_SDE = SDEProblem(complete(vdp_model), u0map, tspan, ps)\n",
     "@time sol_SDE = solve(EnsembleProblem(prob_SDE), SRIW1(), saveat=0.0001, trajectories=100)\n",
     "means_SDE = timeseries_steps_mean(sol_SDE)\n",
     "\n",
@@ -95,7 +92,7 @@
     "\n",
     "pendulum_model = SDESystem(drift_eqs, diff_eqs, t, [x₁, x₂], [k, l, m, g], name = :pendulum)\n",
     "ps = [k => 10, m => 10, l => 10, g => 10]\n",
-    "u0 = [3, 3]\n",
+    "u0map = [x₁ => 3, x₂ => 3]\n",
     "tspan = (0., 15.)"
    ]
   },
@@ -126,11 +123,10 @@
    "source": [
     "closed_eqs = moment_closure(moment_eqs, \"gamma\")\n",
     "\n",
-    "u0map = deterministic_IC(u0, closed_eqs)\n",
     "oprob = ODEProblem(closed_eqs, u0map, tspan, ps)\n",
     "sol_MA = solve(oprob, Tsit5(), saveat=0.01)\n",
     "\n",
-    "prob_SDE = SDEProblem(complete(pendulum_model), u0, tspan, ps)\n",
+    "prob_SDE = SDEProblem(complete(pendulum_model), u0map, tspan, ps)\n",
     "sol_SDE = solve(EnsembleProblem(prob_SDE), SRIW1(), saveat=0.01, trajectories=100)\n",
     "means_SDE = timeseries_steps_mean(sol_SDE)\n",
     "\n",
