--- a/examples/conditional_TEST_J.ipynb
+++ b/examples/conditional_TEST_J.ipynb
@@ -188,14 +188,13 @@
     "        c₅ => 1]\n",
     "\n",
     "# DETERMINISTIC INITIAL CONDITIONS\n",
-    "μ₀ = [1., 0.001]\n",
-    "u₀map = deterministic_IC(μ₀, closed_raw_eqs)\n",
+    "u0map = [:g => 1., :p => 0.001]\n",
     "\n",
     "# time interval to solve on\n",
     "tspan = (0., 1000.0)\n",
     "dt = 1\n",
     "\n",
-    "@time oprob = ODEProblem(closed_raw_eqs, u₀map, tspan, pmap);\n",
+    "@time oprob = ODEProblem(closed_raw_eqs, u0map, tspan, pmap);\n",
     "@time sol_CDM = solve(oprob, Tsit5(), saveat=dt);"
    ]
   },
@@ -272,13 +271,13 @@
     "using JumpProcesses\n",
     "\n",
     "# initial conditions [g, p]\n",
-    "u₀ = [1, 0]\n",
+    "u0map = [:g => 1, :p => 0]\n",
     "\n",
     "# time interval to solve on\n",
     "tspan = (0., 1000.)\n",
     "\n",
     "# create a discrete problem to encode that our species are integer valued\n",
-    "dprob = DiscreteProblem(rn, u₀, tspan, pmap)\n",
+    "dprob = DiscreteProblem(rn, u0map, tspan, pmap)\n",
     "\n",
     "# create a JumpProblem and specify Gillespie's Direct Method as the solver:\n",
     "jprob = JumpProblem(rn, dprob, Direct(), save_positions=(false, false))\n",
