--- a/examples/derivative_matching_example.ipynb
+++ b/examples/derivative_matching_example.ipynb
@@ -15,9 +15,9 @@
     "end\n",
     "\n",
     "# parameter values\n",
-    "p = [:c₁ => 1.0, :c₂ => 1.0]\n",
+    "pmap = [:c₁ => 1.0, :c₂ => 1.0]\n",
     "# initial conditions\n",
-    "u0 = [20, 10]\n",
+    "u0map = [:x₁ => 20, :x₂ => 10]\n",
     "# time interval to solve on\n",
     "tspan = (0., 0.5)"
    ]
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unknowns(dm2_eqs.odes)"
+    "unknowns(dm2_eqs)"
    ]
   },
   {
@@ -61,8 +61,7 @@
    "source": [
     "using OrdinaryDiffEqTsit5\n",
     "\n",
-    "u0map = deterministic_IC(u0, dm2_eqs) # assuming deterministic initial conditions\n",
-    "oprob = ODEProblem(dm2_eqs, u0map, tspan, p)\n",
+    "oprob = ODEProblem(dm2_eqs, u0map, tspan, pmap)\n",
     "dm2_sol = solve(oprob, Tsit5(), saveat=0.01);"
    ]
   },
@@ -104,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unknowns(dm3_eqs.odes)"
+    "unknowns(dm3_eqs)"
    ]
   },
   {
@@ -113,8 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u0map = deterministic_IC(u0, dm3_eqs)\n",
-    "oprob = ODEProblem(dm3_eqs, u0map, tspan, p)\n",
+    "oprob = ODEProblem(dm3_eqs, u0map, tspan, pmap)\n",
     "dm3_sol = solve(oprob, Tsit5(), saveat=0.01, abstol=1e-8, reltol=1e-8)\n",
     "\n",
     "μ₀₁ = dm3_sol[2,:]\n",
@@ -131,8 +129,7 @@
    "source": [
     "central_eqs3 = generate_central_moment_eqs(rn, 3)\n",
     "dm3_central_eqs = moment_closure(central_eqs3, \"derivative matching\")\n",
-    "u0map = deterministic_IC(u0, dm3_central_eqs)\n",
-    "oprob = ODEProblem(dm3_central_eqs, u0map, tspan, p)\n",
+    "oprob = ODEProblem(dm3_central_eqs, u0map, tspan, pmap)\n",
     "dm3_central_sol = solve(oprob, Tsit5(), saveat=0.01, abstol=1e-8, reltol=1e-8);"
    ]
   },
@@ -153,7 +150,7 @@
    "source": [
     "using JumpProcesses\n",
     "\n",
-    "dprob = DiscreteProblem(rn, u0, tspan, p)\n",
+    "dprob = DiscreteProblem(rn, u0map, tspan, pmap)\n",
     "jprob = JumpProblem(rn, dprob, Direct(), save_positions=(false, false))\n",
     "\n",
     "ensembleprob  = EnsembleProblem(jprob)\n",
