--- a/examples/noisy_lotka_volterra.ipynb
+++ b/examples/noisy_lotka_volterra.ipynb
@@ -54,8 +54,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using ModelingToolkit: t_nounits as t, D_nounits as D\n",
-    "\n",
     "@variables x(t), y(t)\n",
     "@parameters γ1, γ2, γ3, γ4, γ5\n",
     "γ = [γ1, γ2, γ3, γ4, γ5]  \n",
@@ -190,8 +188,7 @@
    "outputs": [],
    "source": [
     "LV_moments = moment_closure(generate_raw_moment_eqs(LV, 2), \"log-normal\")\n",
-    "u0map = deterministic_IC(last.(u0), LV_moments)\n",
-    "prob_MA = ODEProblem(LV_moments, u0map, (0.0, Tf), zeros(5))\n",
+    "prob_MA = ODEProblem(LV_moments, u0, (0.0, Tf), zeros(5))\n",
     "psetter_MA! = setp(prob_MA, (γ1, γ2, γ3, γ4, γ5))\n",
     "\n",
     "function obj_MA(p)\n",
@@ -292,6 +289,14 @@
    "source": [
     "opt_MA.time_run"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b974a3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
